<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.anurag.agilizeyourlife.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/life_backlog"
            android:id="@+id/life_backlog_button"
            android:contentDescription="@string/action_life_backlog"
            android:textAlignment="center">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sprint_backlog"
            android:id="@+id/sprint_cycle_button"
            android:contentDescription="@string/action_sprint_cycle"
            android:textAlignment="center">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/todo_list"
            android:id="@+id/todo_list_button"
            android:contentDescription="@string/action_todo_list"
            android:textAlignment="center">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/completed_tasks"
            android:id="@+id/completed_tasks_button"
            android:contentDescription="@string/action_completed_tasks"
            android:textAlignment="center">
        </Button>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/motivational_quote"
                android:gravity="center_horizontal"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/quote_author"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
</RelativeLayout>
